# gpu-kernel-benchmark

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  boxplot.py  new_kernel_op.py  plot_float4_compare.py  plot_float4_compare_avg.py  plot_results.py  result.csv
benchmarks/: results.csv  results_all.csv  results_multi.csv
include/: add.h  benchmark_utils.h  cpu_baseline.h  gpu_benchmark_utils.h  gpu_memory_utils.h  input_generator.h  kernel_dispatch.h  sqrt_log.h  timer.hpp
src/: benchmark_batch.cpp  benchmark_utils.cpp  cpu_baseline.cpp  cuda_utils.cuh  gpu_benchmark_utils.cu  gpu_kernel.cu  gpu_math.h  gpu_memory_utils.cu  input_generator.cpp  kernel_dispatch.cpp  main.cpp
src/kernels/add/: add.h  add_kernels.cu  add_kernels.cuh  add_launcher.cu
src/kernels/sin_cos_pow_relu/: sin_cos_pow_relu.h  sin_cos_pow_relu_kernels.cu  sin_cos_pow_relu_kernels.cuh  sin_cos_pow_relu_launcher.cu
src/kernels/sqrt_log/: sqrt_log.h  sqrt_log_kernels.cu  sqrt_log_kernels.cuh  sqrt_log_launcher.cu
templates/: kernel.h  kernel_kernels.cu  kernel_kernels.cuh  kernel_launcher.cu
